--- a/templates/valves.html
+++ b/templates/valves.html
@@ -11,6 +11,7 @@
 				<h3 class="panel-title">Search Valves</h3>
 				</div>
 				<div class="panel-body">
+					<button type="button" name="createValve" class="btn btn-info pull-right">Create Valve</button>
 					<table class="table table-bordered table-responsive table-hovered table-condensed" id="valves">
 						<thead>
 							<tr>
@@ -24,10 +25,10 @@
 							</tr>
 						</thead>
 						<tbody>
-						
+							{% if valves%}
 						{%for row in valves%}
 						<tr>
-							
+
 							<td><a href="/valve/{{row['valve_id']}}" class="btn btn-info">{{row['valve_id']}}</a></td>
 							<td>{{row['valve_type']}}</td>
 							<td>{{row['rev_no']}}</td>
@@ -37,7 +38,12 @@
 							<td>{{row['manufacturer_no']}}</td>
 						</tr>
 						{%endfor%}
-						
+						{%else%}
+						<p>
+							No valves are recorded
+						</p>
+						{%endif%}
+
 						</tbody>
 					</table>
 				</div>
