--- a/templates/valveCard.html
+++ b/templates/valveCard.html
@@ -331,6 +331,23 @@
 								</div>
 							</div>
 						</div>
+						<div class="panel panel-primary">
+							<div class="panel-heading" role="tab" id="headingSix">
+								<h4 class="panel-title">
+									<a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseThree">
+										Report Generation
+									</a>
+								</h4>
+							</div>
+							<div id="collapseSeven" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
+								<div class="panel-body">
+									<a href="/showReport" class="btn valveOp-btn-squared-default btn-success">
+										<i class="fa fa-tick fa-5x"></i><br/>
+										Generate  <br/>report
+									</a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
