Added create/edit/delete feature

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -27,7 +27,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">EFCO India</a>
+          <a class="navbar-brand" href="/">EFCO India</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -39,16 +39,7 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          {% for message in messages %}
-            <div class="alert alert-block alert-error fade in">
-              <a class="close" data-dismiss="alert">&times;</a>
-              {{ message }}
-            </div>
-          {% endfor %}
-        {% endif %}
-      {% endwith %}
+      
      <div class="content">
       {% block content %}{% endblock %}
      </div>
