--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <div class="col-lg-12">
     <h2>EFCO VALVE Documentation</h2>
       <p>
-        <a href="{{url_for('showValves')}}" class="btn btn-squared-default btn-primary">
+        <a href="{{url_for('showRPSLValves')}}" class="btn btn-squared-default btn-primary">
             <i class="fa fa-line-chart fa-5x"></i><br/>
             Release Pressure &amp; Seat<br/>Leakage Test
         </a>
