--- a/templates/showReport.html
+++ b/templates/showReport.html
@@ -4,7 +4,13 @@
 @media print{
   body
 {
-    margin: 0px 0px 0px 0px;
+  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+font-size: 1em;
+color: #333333;
+margin-top: 2cm;
+margin-right: 2cm;
+margin-bottom: 1.5cm;
+margin-left: 2cm
 }
 
 div#report {
@@ -14,6 +20,7 @@ div#report {
   page-break-inside: avoid;
 }
 }
+@page{size:auto; margin-bottom:5mm;}
 </style>
 <div class="container text-center">
   <div class="row">
@@ -39,13 +46,13 @@ div#report {
               Plant
             </td>
             <td>
-              Plant number
+            {{valve.plant}}
             </td>
             <td class="text-right">
               Certification Number
             </td>
             <td>
-              certi number
+              {{valveTestCard.certificationNumber}}
             </td>
           </tr>
           <tr>
@@ -53,13 +60,13 @@ div#report {
               Valve Type
             </td>
             <td>
-              Valve Type
+              {{valve.valve_type}}
             </td>
             <td class="text-right">
               Creation Date
             </td>
             <td>
-              Date
+              {{valveTestCard.testDate}}
             </td>
           </tr>
           <tr>
@@ -67,13 +74,13 @@ div#report {
               Valve No.
             </td>
             <td>
-              valveNumber
+              {{valve.valve_id}}
             </td>
             <td class="text-right">
               Customer
             </td>
             <td>
-              Customer name
+              {{valve.customer}}
             </td>
           </tr>
           <tr>
@@ -81,13 +88,13 @@ div#report {
               Rev No
             </td>
             <td>
-              Rev number
+              {{valve.rev_no}}
             </td>
             <td class="text-right">
               Application No
             </td>
             <td>
-              app no.
+              {{valve.applicationNumber}}
             </td>
           </tr>
           <tr>
@@ -95,13 +102,13 @@ div#report {
               Part No.
             </td>
             <td>
-              Partno
+              {{valve.part_no}}
             </td>
             <td class="text-right">
               Manufacturer
             </td>
             <td>
-              manufacturer
+              {{valve.manufacturer}}
             </td>
           </tr>
         </tbody>
@@ -115,13 +122,13 @@ div#report {
       <table class="table table-bordered table-responsive">
         <tr>
           <td>
-            DN Inlet(inch/mm)
+            DN Inlet(inch/mm) {{valveTechCard.dnInletUnit}}
           </td>
           <td>
-            DN Outlet(inch/mm)
+            DN Outlet(inch/mm) {{valveTechCard.dnOutletUnit}}
           </td>
           <td>
-            Set Pressure(bar/kgpercm2)
+            Set Pressure(bar/kgpercm2) {{valveTechCard.setPressureUnit}}
           </td>
           <td>
             Seat diameter(inch/mm)
@@ -131,11 +138,11 @@ div#report {
           </td>
         </tr>
         <tr>
-        <td>Value</td>
-        <td>Value</td>
-        <td>Value</td>
-        <td>Value</td>
-        <td>Value</td>
+        <td>{{valveTechCard.dnInlet}}</td>
+        <td>{{valveTechCard.dnOutlet}}</td>
+        <td>{{valveTechCard.setPressure}}</td>
+        <td>{{valveTechCard.seatDiameter}}</td>
+        <td>{{valveTechCard.axMeasurement}}</td>
         </tr>
       </table>
       <div class="col-md-6">
@@ -146,7 +153,7 @@ div#report {
                 Target Release Pressure
               </td>
               <td>
-                Value
+                {{targetPressure}}
               </td>
             </tr>
             <tr>
@@ -154,15 +161,15 @@ div#report {
                 Actual Release Pressure
               </td>
               <td>
-                Value
+                {{actualReleasePressure}}
               </td>
             </tr>
             <tr>
               <td>
-                  Target Release Pressure
+                  Test Medium
               </td>
               <td>
-                Value
+                {{valveTestCard.testMedium}}
               </td>
             </tr>
           </tbody>
@@ -176,7 +183,7 @@ div#report {
                 Target Release Pressure
               </td>
               <td>
-                Value
+                {{targetPressure}}
               </td>
             </tr>
             <tr>
@@ -192,17 +199,17 @@ div#report {
                 Medium
               </td>
               <td>
-                Value
+                {{valveTestCard.testMedium}}
               </td>
             </tr>
           </tbody>
         </table>
       </div>
-      <legend  class="text-left">Release Pressure Test</legend>
-      <img class="img-responsive" src="http://localhost:5000/static/reports/releasePressure/rpImg.jpg" alt="Release Pressure Graph"/>
-      <legend class="text-left">Seat Leakage Test</legend>
-      <img class="img-responsive" src="http://localhost:5000/static/reports/rpseatLeakage/slImg.jpg" alt="Seat Leakage Graph" style="height:350px;"/>
-      <br>
+      <legend  class="text-left">Release Pressure and Seat Leakage Test</legend>
+      <img src="http://localhost:5000/static/reports/releasePressure/rpImg.jpg" alt="Release Pressure Graph"/>
+
+      <img  src="http://localhost:5000/static/reports/rpseatLeakage/slImg.jpg" alt="Seat Leakage Graph" style="height:340px;"/>
+      <br><br>
       <table class="table table-bordered">
         <tbody>
           <tr>
@@ -216,7 +223,7 @@ div#report {
               Inspector
             </td>
             <td>
-              Value
+              {{valveTestCard.inspector}}
             </td>
           </tr>
           <tr>
@@ -230,7 +237,7 @@ div#report {
               Test Date:
             </td>
             <td>
-              Date
+              {{valveTestCard.testDate}}
             </td>
           </tr>
           <tr>
@@ -244,7 +251,7 @@ div#report {
               Location of test
             </td>
             <td>
-              Value
+              {{valveTestCard.testLocation}}
             </td>
           </tr>
           <tr>
@@ -252,7 +259,7 @@ div#report {
             Surveyor
           </td>
             <td>
-              Value
+              {{valveTestCard.surveyor}}
             </td>
           </tr>
         </tbody>
