--- a/templates/valveCard.html
+++ b/templates/valveCard.html
@@ -6,9 +6,17 @@
 
 	<div class="row">
 		<div class="col-lg-12">
+				<div class="alert alert-dismissible alert-info" style="display:none;" id="alert-box">
+				  <button type="button" class="close" data-dismiss="alert">&times;</button>
+				  <p id="message">
+
+				  </p>
+				</div>
 			<div class="panel panel-primary">
 				<div class="panel-heading">
-					<h3 class="panel-title">Valve Log Card</h3>
+					<h3 class="panel-title clearfix">Valve Log Card
+					<button type="button" id="editValve" class="btn-xs btn-warning pull-right"><i class="fa fa-pencil"></i> Edit Valve</button>
+				</h3>
 				</div>
 				<div class="panel-body">
 					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -28,25 +36,25 @@
 											<div class="form-group">
 												<label class="col-lg-4 control-label" >Valve No</label>
 												<div class="col-lg-6">
-													<input class="input-sm form-control input-md" disabled="disabled" name="valveNumber" value="{{valveCard[0]['valve_id']}}">
+													<input class="input-sm form-control input-md" disabled="disabled" name="valveNumber" id="valveNumber" value="{{valveCard['valve_id']}}">
 												</div>
 											</div>
 											<div class="form-group">
 												<label class="col-lg-4 control-label" >Valve Type</label>
 												<div class="col-lg-6">
-													<input class="input-sm form-control input-md" disabled="disabled" name="valveType" value="{{valveCard[0]['valve_type']}}">
+													<input class="input-sm form-control input-md" disabled="disabled" name="valveType" id="valveType" value="{{valveCard['valve_type']}}">
 												</div>
 											</div>
 											<div class="form-group">
 												<label class="col-lg-4 control-label" >Rev No.</label>
 												<div class="col-lg-6">
-													<input class="input-sm form-control input-md" disabled="disabled" name="valveNumber" value="{{valveCard[0]['rev_no']}}">
+													<input class="input-sm form-control input-md" disabled="disabled" name="rev_no" id="rev_no" value="{{valveCard['rev_no']}}">
 												</div>
 											</div>
 											<div class="form-group">
 												<label class="col-lg-4 control-label" >Part No.</label>
 												<div class="col-lg-6">
-													<input class="input-sm form-control input-md" disabled="disabled" name="valveNumber" value="{{valveCard[0]['part_no']}}">
+													<input class="input-sm form-control input-md" disabled="disabled" id="part_no" value="{{valveCard['part_no']}}">
 												</div>
 											</div>
 										</div>
@@ -54,33 +62,36 @@
 											<div class="form-group">
 												<label class="col-lg-4 control-label" >Plant</label>
 												<div class="col-lg-6">
-													<input class="input-sm form-control input-md" disabled="disabled" name="valveNumber" value="{{valveCard[0]['plant']}}">
+													<input class="input-sm form-control input-md" disabled="disabled" id="plant" value="{{valveCard['plant']}}">
 												</div>
 											</div>
 											<div class="form-group">
 												<label class="col-lg-4 control-label" >Install Location</label>
 												<div class="col-lg-6">
-													<input class="input-sm form-control input-md" disabled="disabled" name="valveType" value="{{valveCard[0]['install_locations']}}">
+													<input class="input-sm form-control input-md" disabled="disabled" id="install_locations" value="{{valveCard['install_locations']}}">
 												</div>
 											</div>
 											<div class="form-group">
 												<label class="col-lg-4 control-label" >Manufacturer</label>
 												<div class="col-lg-6">
-													<input class="input-sm form-control input-md" disabled="disabled" name="valveNumber" value="{{valveCard[0]['manufacturer']}}">
+													<input class="input-sm form-control input-md" disabled="disabled" id="manufacturer" value="{{valveCard['manufacturer']}}">
 												</div>
 											</div>
 											<div class="form-group">
 												<label class="col-lg-4 control-label" >Manufacturer No.</label>
 												<div class="col-lg-6">
-													<input class="input-sm form-control input-md" disabled="disabled" name="valveNumber" value="{{valveCard[0]['manufacturer_no']}}">
+													<input class="input-sm form-control input-md" disabled="disabled" id="manufacturer_no" value="{{valveCard['manufacturer_no']}}">
 												</div>
 											</div>
 											<div class="form-group">
 												<label class="col-lg-4 control-label" >Customer</label>
 												<div class="col-lg-6">
-													<input class="input-sm form-control input-md" disabled="disabled" name="valveNumber" value="{{valveCard[0]['customer']}}">
+													<input class="input-sm form-control input-md" disabled="disabled" id="customer" value="{{valveCard['customer']}}">
 												</div>
 											</div>
+										</div>
+										<div class="form-group">
+											<button type="button" name="updateValveData" id="updateValveData" class="btn-sm btn-info pull-right col-md-3" style="display:none;"><i class="fa fa-spinner"></i>Update Valve</button>
 										</div>
 
 									</div>
@@ -102,22 +113,22 @@
 											<div class="form-group">
 												<label class="col-md-3 control-label">DN-Inlet</label>
 												<div class="col-md-9">
-													<input id="dnOutlet" name="dnInlet" class=" input-sm form-control col-md-3" placeholder="" type="text" required="">
-													<select class="input-sm form-control">
+													<input id="dnInlet" name="dnInlet" class=" input-sm form-control col-md-3" placeholder="" value="{{valveTechCard.dnInlet}}" type="text" required="" disabled="disabled">
+													<select disabled="disabled" class="input-sm form-control">
 														<option value="-1">Select one</option>
-														<option value="mm">MM</option>
-														<option value="in">Inch</option>
+														<option value="mm" {%if valveTechCard['dnInletUnit']=="mm"%}selected{%endif%}>MM</option>
+														<option value="in"{%if valveTechCard['dnInletUnit']=="inch"%}selected{%endif%}>Inch</option>
 													</select>
 												</div>
 											</div>
 											<div class="form-group">
 												<label class="col-md-3 control-label">DN-Outlet</label>
 												<div class="col-md-9">
-													<input id="dnOutlet" name="dnOutlet" class="input-sm form-control col-md-3" placeholder="" type="text" required="">
-													<select class="input-sm form-control">
+													<input id="dnOutlet" name="dnOutlet" class="input-sm form-control col-md-3" placeholder="" value="{{valveTechCard.dnOutlet}}" type="text" required="" disabled="disabled">
+													<select disabled="disabled" class="input-sm form-control">
 														<option value="-1">Select one</option>
-														<option value="mm">MM</option>
-														<option value="in">Inch</option>
+														<option value="mm" {%if valveTechCard['dnOutletUnit']=="mm"%}selected{%endif%}>MM</option>
+														<option value="in" {%if valveTechCard['dnOutletUnit']=="inch"%}selected{%endif%}>Inch</option>
 													</select>
 												</div>
 											</div>
@@ -126,23 +137,23 @@
 											<div class="form-group">
 												<label class="col-md-3 control-label" for="buttondropdown">Set Pressure</label>
 												<div class="col-md-9">
-													<input id="setPressure" name="setPressure" class="input-sm form-control col-md-3" placeholder="" type="text" required="">
-													<select class="input-sm form-control">
+													<input id="setPressure" name="setPressure" class="input-sm form-control col-md-3" placeholder="" value="{{valveTechCard.setPressure}}" type="text" required="" disabled="disabled">
+													<select disabled="disabled" class="input-sm form-control">
 														<option value="-1">Select one</option>
-														<option value="mm">bar</option>
-														<option value="in">kg/cm<sup>2</sup></option>
+														<option value="mm" {%if valveTechCard.setPressureUnit=="bar"%}selected{%endif%}>bar</option>
+														<option value="in" {%if valveTechCard.setPressureUnit=="kgpercm2"%}selected{%endif%}>kg/cm<sup>2</sup></option>
 													</select>
 												</div>
 											</div>
 											<div class="form-group">
 												<label class="col-md-3 control-label" for="buttondropdown">Seat Diameter</label>
 												<div class="col-md-9">
-													<input id="seatDiameter" name="seatDiameter" class="input-sm form-control col-md-3" placeholder="" type="text" required="">
-													<select class="input-sm form-control">
+													<input id="seatDiameter" name="seatDiameter" class="input-sm form-control col-md-3" placeholder="" type="text" required="" value="{{valveTechCard.seatDiameter}}" disabled="disabled">
+													<!-- <select class="input-sm form-control">
 														<option value="-1">Select one</option>
 														<option value="mm">MM</option>
 														<option value="in">Inch</option>
-													</select>
+													</select> -->
 												</div>
 											</div>
 										</div>
@@ -150,9 +161,13 @@
 											<div class="form-group">
 												<label class="col-md-3 control-label" for="buttondropdown">A/X Measurement</label>
 												<div class="col-md-9">
-													<input id="axMeasurement" name="axMeasurement" class="input-sm form-control col-md-3" placeholder="" type="text" required="">
+													<input value="{{valveTechCard.axMeasurement}}" id="axMeasurement" name="axMeasurement" class="input-sm form-control col-md-3" placeholder="" type="text" required="" disabled="disabled">
 												</div>
 											</div>
+
+										</div>
+										<div class="form-group">
+											<button type="button" id="updateRPSLValveTechData" class="btn-sm btn-info pull-right col-md-3" style="display:none;"><i class="fa fa-spinner"></i>Update Tech Data</button>
 										</div>
 									</div>
 								</div>
@@ -172,41 +187,41 @@
 										<div class="col-md-4">
 											<div class="form-group">
 												<label class="control-label">Inspector</label>
-												<input class="input-sm form-control col-md-3" name="inspector" />
+												<input disabled="disabled" class="input-sm form-control col-md-3" name="inspector" value="{{valveTestCard.inspector}}" />
 											</div>
 											<div class="form-group">
 												<label class="control-label">Test Location</label>
-												<input class="input-sm form-control col-md-3" name="testLocation" />
+												<input disabled="disabled" class="input-sm form-control col-md-3" name="testLocation"  value="{{valveTestCard.testLocation}}"/>
 											</div>
 											<div class="form-group">
 												<label class="control-label">Test Medium</label>
-												<input class="input-sm form-control col-md-3" name="testMedium" />
+												<input disabled="disabled" class="input-sm form-control col-md-3" name="testMedium" value="{{valveTestCard.testMedium}}"/>
 												<!-- This should be a dropdown -->
 											</div>
 										</div>
 										<div class="col-md-4">
 											<div class="form-group">
 												<label class="control-label">Application Number</label>
-												<input class="input-sm form-control col-md-3" name="applicationNumber" />
+												<input disabled="disabled" class="input-sm form-control col-md-3" name="applicationNumber" value="{{valveTestCard.applicationNumber}}"/>
 											</div>
 											<div class="form-group">
 												<label class="control-label">Surveyor</label>
-												<input class="input-sm form-control col-md-3" name="surveyor" />
+												<input disabled="disabled" class="input-sm form-control col-md-3" name="surveyor" value="{{valveTestCard.surveyor}}"/>
 											</div>
 											<div class="form-group">
 												<label class="control-label">Pressure Transducer</label>
-												<input class="input-sm form-control col-md-3" name="pressureTransducer" />
+												<input disabled="disabled" class="input-sm form-control col-md-3" name="pressureTransducer" value="{{valveTestCard.pressureTransducer}}"/>
 												<!-- This should be a dropdown -->
 											</div>
 										</div>
 										<div class="col-md-4">
 											<div class="form-group">
 												<label class="control-label">Certification No.</label>
-												<input class="input-sm form-control col-md-3" name="certificationNumber" />
+												<input disabled="disabled" class="input-sm form-control col-md-3" name="certificationNumber" value="{{valveTestCard.certificationNumber}}"/>
 											</div>
 											<div class="form-group">
 												<label class="control-label">Test Date</label>
-												<input class="input-sm form-control col-md-3" name="testDate" />
+												<input disabled="disabled" class="input-sm form-control col-md-3" name="testDate" value="{{valveTestCard.testDate}}"/>
 												<!-- Use Date Picker -->
 											</div>
 
@@ -247,7 +262,7 @@
 									<div class="form-horizontal col-md-4">
 										<div class="form-group">
 											<label class="control-label">Actual Release Pressure</label>
-											<input class="input-sm form-control" name="actualReleasePressure" id="actualReleasePressure" />
+											<input class="input-sm form-control" name="actualReleasePressure" id="actualReleasePressure" disabled="disabled"/>
 										</div>
 									</div>
 								</div>
@@ -280,7 +295,7 @@
 										<div class="form-horizontal col-md-4">
 											<div class="form-group">
 												<label class="control-label">Final Pressure</label>
-												<input class="input-sm form-control" name="actualReleasePressure" id="finalPressure" />
+												<input class="input-sm form-control" name="actualReleasePressure" id="finalPressure" disabled="disabled"/>
 											</div>
 										</div>
 									</div>
@@ -298,10 +313,10 @@
 							<div id="collapseSix" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
 								<div class="panel-body">
 									<p>
-									  <a href="#" class="btn valveOp-btn-squared-default btn-default">
+									  <!-- <a href="#" class="btn valveOp-btn-squared-default btn-default">
 											<i class="fa fa-clone fa-5x"></i><br/>
 											Copy <br/>Valve
-										</a>
+										</a> -->
 										<a href="#" class="btn valveOp-btn-squared-default btn-danger">
 											<i class="fa fa-times fa-5x"></i><br/>
 											Delete <br/> Valve
@@ -341,10 +356,17 @@
 							</div>
 							<div id="collapseSeven" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingThree">
 								<div class="panel-body">
-									<a href="/showReport" class="btn valveOp-btn-squared-default btn-success">
-										<i class="fa fa-tick fa-5x"></i><br/>
-										Generate  <br/>report
-									</a>
+									<form action="http://localhost:5000/showReport" method="get" id="reportForm">
+										<input type="hidden" name="rtargetPressure" id="rtargetPressure" value="">
+										<input type="hidden" name="rfinalPressure"  id="rfinalPressure" value="">
+										<input type="hidden" name="rvalve_id" id="rvalve_id" value="">
+										<input type="hidden" name="ractualPressure" id="ractualPressure" value="">
+										<a href="#" class="btn valveOp-btn-squared-default btn-success" id="generateReport">
+											<i class="fa fa-check fa-5x"></i><br/>
+											Generate  <br/>report
+										</a>
+									</form>
+
 								</div>
 							</div>
 						</div>
